Name:                yacr
Version:             0.1.0.0
Synopsis:            Changelog-to-rss tool
Category:            Development

License:             OtherLicense
License-file:        LICENSE
-- Copyright:           
Author:              kamaradclimber
Maintainer:          kamaradclimber att gmail dott com

Cabal-version:       >=1.8
Build-type:          Simple
-- Extra-source-files:  

Source-repository head
    Type:     git
    Location: git://git.familleseux.net/yacr.git

Library
    Exposed-modules:
        Yacr.Parsers,
        Yacr.Types,
        Yacr.Core
    Build-depends:
        base == 4.*,
        cmdargs,
        network,
        old-locale,
        parsec,
        rss,
        sundown,
        text,
        time
    
    -- Other-modules:       
    -- Build-tools:         
    Ghc-options: -Wall

Executable yacr
    Build-depends: 
        yacr,
        base == 4.*,
        cmdargs,
        network,
        parsec,
        rss,
        sundown,
        text
    Main-is: Main.hs
    Hs-Source-Dirs: Yacr
    Ghc-options: -Wall -threaded
